@@ -2020,3 +2020,5 @@
 - Remove include/nameser.h and reference to nameser.h from s_bsd.c. The associated
   functionality has been provided by c-ares for a long time.
 - Remove remaining nameser.h references from Makfiles.
+- Prevent stacked bans (like +b ~q:~q:~n:~c:#chanel) from crashing unrealircd due
+  to over-recycling a static buffer. Discovered by syzop.
